Set text color to #333333

--- a/packages/mosaico/templates/versafix-1/template-versafix-1.html
+++ b/packages/mosaico/templates/versafix-1/template-versafix-1.html
@@ -548,16 +548,16 @@
 
                     <table class="vb-content" border="0" cellspacing="9" cellpadding="0" width="368" style="width: 100%; -ko-attr-width: @[570 - 2 * 18 - Math.round(imageWidth)]" align="left">
                       <tr data-ko-display="titleVisible">
-                        <td style="font-size: 18px; font-family: Arial, Helvetica, sans-serif; color: #3f3f3f; text-align:left;
-                          -ko-font-size: @[titleTextStyle.size]px; -ko-font-family: @titleTextStyle.face; -ko-color: @titleTextStyle.color">
-                          <span style="color: #3f3f3f; -ko-color: @titleTextStyle.color" data-ko-editable="titleText">
+                        <td style="font-size: 18px; font-family: Arial, Helvetica, sans-serif; color: #02426f; text-align:left;
+                          -ko-font-size: @[titleTextStyle.size]px; -ko-font-family: @titleTextStyle.face;">
+                          <span style="color: #02426f" data-ko-editable="titleText">
                           Title
                           </span>
                         </td>
                       </tr>
                       <tr>
-                        <td align="left" style="text-align: left; font-size: 13px; font-family: Arial, Helvetica, sans-serif; color: #3f3f3f;
-                          -ko-font-size: @[longTextStyle.size]px; -ko-font-family: @longTextStyle.face; -ko-color: @longTextStyle.color"
+                        <td align="left" style="text-align: left; font-size: 13px; font-family: Arial, Helvetica, sans-serif; color: #333333;
+                          -ko-font-size: @[longTextStyle.size]px; -ko-font-family: @longTextStyle.face;"
                           data-ko-editable="longText" class="long-text links-color">
                           <p>Far far away, behind the word mountains, far from the countries <a href="">Vokalia and Consonantia</a>, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
                         </td>
@@ -635,9 +635,9 @@
           </tr>
           <tr><td><table align="left" border="0" cellpadding="0" cellspacing="0" width="100%">
             <tr data-ko-display="titleVisible">
-              <td style="font-size: 18px; font-family: Arial, Helvetica, sans-serif; color: #3f3f3f; text-align:left;
-                -ko-font-size: @[titleTextStyle.size]px; -ko-font-family: @titleTextStyle.face; -ko-color: @titleTextStyle.color">
-                <span style="color: #3f3f3f; -ko-color: @titleTextStyle.color" data-ko-editable="text">
+              <td style="font-size: 18px; font-family: Arial, Helvetica, sans-serif; color: #02426f; text-align:left;
+                -ko-font-size: @[titleTextStyle.size]px; -ko-font-family: @titleTextStyle.face;">
+                <span style="color: #02426f;" data-ko-editable="text">
                Section Title
                 </span>
               </td>
@@ -646,8 +646,8 @@
               <td height="9" style="font-size:1px; line-height: 1px;">&nbsp;</td>
             </tr>
             <tr>
-              <td align="left" style="text-align: left; font-size: 13px; font-family: Arial, Helvetica, sans-serif; color: #3f3f3f;
-                -ko-font-size: @[longTextStyle.size]px; -ko-font-family: @longTextStyle.face; -ko-color: @longTextStyle.color"
+              <td align="left" style="text-align: left; font-size: 13px; font-family: Arial, Helvetica, sans-serif; color: #333333;
+                -ko-font-size: @[longTextStyle.size]px; -ko-font-family: @longTextStyle.face;"
                 data-ko-editable="longText" class="long-text links-color">
                 <p>Far far away, behind the word mountains, far from the countries <a href="">Vokalia and Consonantia</a>, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
               </td>
@@ -720,8 +720,8 @@
         <table width="570" border="0" cellpadding="0" cellspacing="18" class="vb-container fullpad" bgcolor="#ffffff" 
           style="width: 100%; max-width: 570px; background-color: #ffffff; -ko-attr-bgcolor: @backgroundColor; -ko-background-color: @backgroundColor;">
           <tr>
-            <td align="left" style="text-align: left; font-size: 13px; font-family: Arial, Helvetica, sans-serif; color: #3f3f3f;
-              -ko-font-size: @[longTextStyle.size]px; -ko-font-family: @longTextStyle.face; -ko-color: @longTextStyle.color"
+            <td align="left" style="text-align: left; font-size: 13px; font-family: Arial, Helvetica, sans-serif; color: #333333;
+              -ko-font-size: @[longTextStyle.size]px; -ko-font-family: @longTextStyle.face;"
               data-ko-editable="longText" class="long-text links-color">
               <p>Far far away, behind the word mountains, far from the countries <a href="">Vokalia and Consonantia</a>, there live the blind texts.</p>
               <p>Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
@@ -765,15 +765,15 @@
                         </td>
                       </tr>
                       <tr data-ko-display="titleVisible">
-                        <td style="font-size: 18px; font-family: Arial, Helvetica, sans-serif; color: #3f3f3f; text-align:left;
-                          -ko-font-size: @[titleTextStyle.size]px; -ko-font-family: @titleTextStyle.face; -ko-color: @titleTextStyle.color">
-                          <span style="color: #3f3f3f; -ko-color: @titleTextStyle.color" data-ko-editable="leftTitleText">Title
+                        <td style="font-size: 18px; font-family: Arial, Helvetica, sans-serif; color: #02426f; text-align:left;
+                          -ko-font-size: @[titleTextStyle.size]px; -ko-font-family: @titleTextStyle.face;">
+                          <span style="color: #02426f;" data-ko-editable="leftTitleText">Title
                           </span>
                         </td>
                       </tr>
                       <tr>
-                        <td align="left" style="text-align: left; font-size: 13px; font-family: Arial, Helvetica, sans-serif; color: #3f3f3f; 
-                          -ko-font-size: @[longTextStyle.size]px; -ko-font-family: @longTextStyle.face; -ko-color: @longTextStyle.color"
+                        <td align="left" style="text-align: left; font-size: 13px; font-family: Arial, Helvetica, sans-serif; color: #333333; 
+                          -ko-font-size: @[longTextStyle.size]px; -ko-font-family: @longTextStyle.face;"
                           data-ko-editable="leftLongText" class="long-text links-color">
                           <p>Far far away, behind the word mountains, far from the countries <a href="">Vokalia and Consonantia</a>, there live the blind texts. </p>
                         </td>
@@ -813,16 +813,16 @@
                         </td>
                       </tr>
                       <tr data-ko-display="titleVisible">
-                        <td style="font-size: 18px; font-family: Arial, Helvetica, sans-serif; color: #3f3f3f; text-align:left;
-                          -ko-font-size: @[titleTextStyle.size]px; -ko-font-family: @titleTextStyle.face; -ko-color: @titleTextStyle.color">
-                          <span style="color: #3f3f3f; -ko-color: @titleTextStyle.color"  data-ko-editable="middleTitleText">
+                        <td style="font-size: 18px; font-family: Arial, Helvetica, sans-serif; color: #02426f; text-align:left;
+                          -ko-font-size: @[titleTextStyle.size]px; -ko-font-family: @titleTextStyle.face;">
+                          <span style="color: #02426f;"  data-ko-editable="middleTitleText">
                          Title
                           </span>
                         </td>
                       </tr>
                       <tr>
-                        <td align="left" style="text-align: left; font-size: 13px; font-family: Arial, Helvetica, sans-serif; color: #3f3f3f;
-                          -ko-font-size: @[longTextStyle.size]px; -ko-font-family: @longTextStyle.face; -ko-color: @longTextStyle.color"
+                        <td align="left" style="text-align: left; font-size: 13px; font-family: Arial, Helvetica, sans-serif; color: #333333;
+                          -ko-font-size: @[longTextStyle.size]px; -ko-font-family: @longTextStyle.face;"
                           data-ko-editable="middleLongText" class="long-text links-color">
                           <p>Far far away, behind the word mountains, far from the countries <a href="">Vokalia and Consonantia</a>, there live the blind texts. </p>
                         </td>
@@ -862,16 +862,16 @@
                         </td>
                       </tr>
                       <tr data-ko-display="titleVisible">
-                        <td style="font-size: 18px; font-family: Arial, Helvetica, sans-serif; color: #3f3f3f; text-align:left;
-                          -ko-font-size: @[titleTextStyle.size]px; -ko-font-family: @titleTextStyle.face; -ko-color: @titleTextStyle.color">
-                          <span style="color: #3f3f3f; -ko-color: @titleTextStyle.color" data-ko-editable="rightTitleText">
+                        <td style="font-size: 18px; font-family: Arial, Helvetica, sans-serif; color: #02426f; text-align:left;
+                          -ko-font-size: @[titleTextStyle.size]px; -ko-font-family: @titleTextStyle.face;">
+                          <span style="color: #02426f;" data-ko-editable="rightTitleText">
                          Title
                           </span>
                         </td>
                       </tr>
                       <tr>
-                        <td align="left" style="text-align: left; font-size: 13px; font-family: Arial, Helvetica, sans-serif; color: #3f3f3f;
-                          -ko-font-size: @[longTextStyle.size]px; -ko-font-family: @longTextStyle.face; -ko-color: @longTextStyle.color"
+                        <td align="left" style="text-align: left; font-size: 13px; font-family: Arial, Helvetica, sans-serif; color: #333333;
+                          -ko-font-size: @[longTextStyle.size]px; -ko-font-family: @longTextStyle.face;"
                           data-ko-editable="rightLongText" class="long-text links-color">
                           <p>Far far away, behind the word mountains, far from the countries <a href="">Vokalia and Consonantia</a>, there live the blind texts. </p>
                         </td>
@@ -939,16 +939,16 @@
                         </td>
                       </tr>
                       <tr data-ko-display="titleVisible">
-                        <td style="font-size: 18px; font-family: Arial, Helvetica, sans-serif; color: #3f3f3f; text-align:left;
-                          -ko-font-size: @[titleTextStyle.size]px; -ko-font-family: @titleTextStyle.face; -ko-color: @titleTextStyle.color">
-                          <span style="color: #3f3f3f; -ko-color: @titleTextStyle.color" data-ko-editable="leftTitleText">
+                        <td style="font-size: 18px; font-family: Arial, Helvetica, sans-serif; color: #02426f; text-align:left;
+                          -ko-font-size: @[titleTextStyle.size]px; -ko-font-family: @titleTextStyle.face;">
+                          <span style="color: #02426f;" data-ko-editable="leftTitleText">
                           Title
                           </span>
                         </td>
                       </tr>
                       <tr>
-                        <td align="left" style="text-align: left; font-size: 13px; font-family: Arial, Helvetica, sans-serif; color: #3f3f3f;
-                          -ko-font-size: @[longTextStyle.size]px; -ko-font-family: @longTextStyle.face; -ko-color: @longTextStyle.color"
+                        <td align="left" style="text-align: left; font-size: 13px; font-family: Arial, Helvetica, sans-serif; color: #333333;
+                          -ko-font-size: @[longTextStyle.size]px; -ko-font-family: @longTextStyle.face;"
                           data-ko-editable="leftLongText" class="long-text links-color">
                           <p>Far far away, behind the word mountains, far from the countries <a href="">Vokalia and Consonantia</a>, there live the blind texts. </p>
                         </td>
@@ -988,16 +988,16 @@
                         </td>
                       </tr>
                       <tr data-ko-display="titleVisible">
-                        <td style="font-size: 18px; font-family: Arial, Helvetica, sans-serif; color: #3f3f3f; text-align:left;
-                          -ko-font-size: @[titleTextStyle.size]px; -ko-font-family: @titleTextStyle.face; -ko-color: @titleTextStyle.color">
-                          <span style="color: #3f3f3f; -ko-color: @titleTextStyle.color" data-ko-editable="rightTitleText">
+                        <td style="font-size: 18px; font-family: Arial, Helvetica, sans-serif; color: #02426f; text-align:left;
+                          -ko-font-size: @[titleTextStyle.size]px; -ko-font-family: @titleTextStyle.face;">
+                          <span style="color: #02426f;" data-ko-editable="rightTitleText">
                          Title
                           </span>
                         </td>
                       </tr>
                       <tr>
-                        <td align="left" style="text-align: left; font-size: 13px; font-family: Arial, Helvetica, sans-serif; color: #3f3f3f;
-                          -ko-font-size: @[longTextStyle.size]px; -ko-font-family: @longTextStyle.face; -ko-color: @longTextStyle.color"
+                        <td align="left" style="text-align: left; font-size: 13px; font-family: Arial, Helvetica, sans-serif; color: #333333;
+                          -ko-font-size: @[longTextStyle.size]px; -ko-font-family: @longTextStyle.face;"
                           data-ko-editable="rightLongText" class="long-text links-color">
                           <p>Far far away, behind the word mountains, far from the countries <a href="">Vokalia and Consonantia</a>, there live the blind texts.</p>
                         </td>
