--- a/packages/mosaico/templates/versafix-1/template-versafix-1.html
+++ b/packages/mosaico/templates/versafix-1/template-versafix-1.html
@@ -1121,8 +1121,8 @@
                   hspace="0" border="0" vspace="0" width="570" data-ko-placeholder-height="200"
                   src="http://mosaico.io/srv/f-default/img?method=placeholder&amp;params=570%2C200" class="mobile-full"
                   alt="" style="max-width: 570px; display: block; border-radius: 0px; width: 100%; height: auto; font-size: 13px;
-                  font-family: Arial, Helvetica, sans-serif; color: #3f3f3f; -ko-font-size: @[longTextStyle.size]px;
-                  -ko-font-family: @longTextStyle.face; -ko-color: @longTextStyle.color; -ko-attr-alt: @image.alt;" /></a>
+                  font-family: Arial, Helvetica, sans-serif; color: #333333; -ko-font-size: @[longTextStyle.size]px;
+                  -ko-font-family: @longTextStyle.face; -ko-attr-alt: @image.alt;" /></a>
             </td>
           </tr>
         </table>
@@ -1134,8 +1134,8 @@
                   hspace="0" border="0" vspace="0" width="534" data-ko-placeholder-height="280"
                   src="http://mosaico.io/srv/f-default/img?method=placeholder&amp;params=534%2C280" class="mobile-full"
                   alt="" style="max-width: 534px; display: block; border-radius: 0px; width: 100%; height: auto; font-size: 13px;
-                  font-family: Arial, Helvetica, sans-serif; color: #3f3f3f; -ko-font-size: @[longTextStyle.size]px;
-                  -ko-font-family: @longTextStyle.face; -ko-color: @longTextStyle.color; -ko-attr-alt: @image.alt;" /></a>
+                  font-family: Arial, Helvetica, sans-serif; color: #333333; -ko-font-size: @[longTextStyle.size]px;
+                  -ko-font-family: @longTextStyle.face; -ko-attr-alt: @image.alt;" /></a>
             </td>
           </tr>
         </table>
@@ -1166,8 +1166,8 @@
                   hspace="0" align="left" border="0" vspace="0" width="285" height="180" class="mobile-full"
                   src="http://mosaico.io/srv/f-default/img?method=placeholder&amp;params=285%2C180"
                   alt="" style="display: block; border-radius: 0px; width: 100%; height: auto;font-size: 13px;
-                  font-family: Arial, Helvetica, sans-serif; color: #3f3f3f; -ko-font-size: @[longTextStyle.size]px; -ko-font-family: @longTextStyle.face;
-                  -ko-color: @longTextStyle.color; -ko-attr-height: @imageHeight; -ko-attr-alt: @leftImage.alt;" /></a>
+                  font-family: Arial, Helvetica, sans-serif; color: #333333; -ko-font-size: @[longTextStyle.size]px; -ko-font-family: @longTextStyle.face;
+                  -ko-attr-height: @imageHeight; -ko-attr-alt: @leftImage.alt;" /></a>
 </div><!--[if (gte mso 9)|(lte ie 8)]></td>
 <td align="left" valign="top" width="285">
 <![endif]--><div style="display:inline-block; max-width:285px; vertical-align:top; width:100%; width:100%; " class="mobile-full"> 
@@ -1175,8 +1175,8 @@
                   hspace="0" align="right" border="0" vspace="0" width="285" height="180" class="mobile-full"
                   src="http://mosaico.io/srv/f-default/img?method=placeholder&amp;params=285%2C180"
                   alt="" style="display: block; border-radius: 0px; width: 100%; height: auto;font-size: 13px;
-                  font-family: Arial, Helvetica, sans-serif; color: #3f3f3f; -ko-font-size: @[longTextStyle.size]px; -ko-font-family: @longTextStyle.face;
-                  -ko-color: @longTextStyle.color; -ko-attr-height: @imageHeight; -ko-attr-alt: @rightImage.alt;" /></a>
+                  font-family: Arial, Helvetica, sans-serif; color: #333333; -ko-font-size: @[longTextStyle.size]px; -ko-font-family: @longTextStyle.face;
+                  -ko-attr-height: @imageHeight; -ko-attr-alt: @rightImage.alt;" /></a>
 </div>
 <!--[if (gte mso 9)|(lte ie 8)]></td><![endif]-->
 <!--[if (gte mso 9)|(lte ie 8)]></tr></table><![endif]-->
@@ -1200,8 +1200,8 @@
                         hspace="0" align="left" border="0" vspace="0" width="258" height="180"
                         src="http://mosaico.io/srv/f-default/img?method=placeholder&amp;params=258%2C180" class="mobile-full"
                         alt="" style="display: block; border-radius: 0px; width: 100%; height: auto;font-size: 13px;
-                        font-family: Arial, Helvetica, sans-serif; color: #3f3f3f; -ko-font-size: @[longTextStyle.size]px; -ko-font-family: @longTextStyle.face;
-                        -ko-color: @longTextStyle.color; -ko-attr-height: @imageHeight; -ko-attr-alt: @leftImage.alt;" /></a>
+                        font-family: Arial, Helvetica, sans-serif; color: #333333; -ko-font-size: @[longTextStyle.size]px; -ko-font-family: @longTextStyle.face;
+                        -ko-attr-height: @imageHeight; -ko-attr-alt: @leftImage.alt;" /></a>
                   </td>
                 </tr>
               </table>
@@ -1217,8 +1217,8 @@
                         hspace="0" align="right" border="0" vspace="0" width="258" height="180"
                         src="http://mosaico.io/srv/f-default/img?method=placeholder&amp;params=258%2C180" class="mobile-full"
                         alt="" style="display: block; border-radius: 0px; width: 100%; height: auto;font-size: 13px;
-                        font-family: Arial, Helvetica, sans-serif; color: #3f3f3f; -ko-font-size: @[longTextStyle.size]px; -ko-font-family: @longTextStyle.face;
-                        -ko-color: @longTextStyle.color; -ko-attr-height: @imageHeight; -ko-attr-alt: @rightImage.alt;" /></a>
+                        font-family: Arial, Helvetica, sans-serif; color: #333333; -ko-font-size: @[longTextStyle.size]px; -ko-font-family: @longTextStyle.face;
+                        -ko-attr-height: @imageHeight; -ko-attr-alt: @rightImage.alt;" /></a>
                   </td>
                 </tr>
               </table>
@@ -1256,8 +1256,8 @@
                   hspace="0" align="left" border="0" vspace="0" width="190" height="160" class="mobile-full"
                   src="http://mosaico.io/srv/f-default/img?method=placeholder&amp;params=190%2C160"
                   alt="" style="display: block; border-radius: 0px; width: 100%; height: auto;font-size: 13px;
-                  font-family: Arial, Helvetica, sans-serif; color: #3f3f3f; -ko-font-size: @[longTextStyle.size]px; -ko-font-family: @longTextStyle.face;
-                  -ko-color: @longTextStyle.color; -ko-attr-height: @imageHeight; -ko-attr-alt: @leftImage.alt;" /></a>
+                  font-family: Arial, Helvetica, sans-serif; color: #333333; -ko-font-size: @[longTextStyle.size]px; -ko-font-family: @longTextStyle.face;
+                  -ko-attr-height: @imageHeight; -ko-attr-alt: @leftImage.alt;" /></a>
 </div><!--[if (gte mso 9)|(lte ie 8)]></td>
 <td align="left" valign="top" width="190">
 <![endif]--><div style="display:inline-block; max-width:190px; vertical-align:top; width:100%; " class="mobile-full"> 
@@ -1265,8 +1265,8 @@
                   hspace="0" align="left" border="0" vspace="0" width="190" height="160" class="mobile-full"
                   src="http://mosaico.io/srv/f-default/img?method=placeholder&amp;params=190%2C160"
                   alt="" style="display: block; border-radius: 0px; width: 100%; height: auto;font-size: 13px;
-                  font-family: Arial, Helvetica, sans-serif; color: #3f3f3f; -ko-font-size: @[longTextStyle.size]px; -ko-font-family: @longTextStyle.face;
-                  -ko-color: @longTextStyle.color; -ko-attr-height: @imageHeight; -ko-attr-alt: @middleImage.alt;" /></a>
+                  font-family: Arial, Helvetica, sans-serif; color: #333333; -ko-font-size: @[longTextStyle.size]px; -ko-font-family: @longTextStyle.face;
+                  -ko-attr-height: @imageHeight; -ko-attr-alt: @middleImage.alt;" /></a>
 </div><!--[if (gte mso 9)|(lte ie 8)]></td>
 <td align="left" valign="top" width="190">
 <![endif]--><div style="display:inline-block; max-width:190px; vertical-align:top; width:100%; " class="mobile-full"> 
@@ -1274,8 +1274,8 @@
                   hspace="0" align="right" border="0" vspace="0" width="190" height="160" class="mobile-full"
                   src="http://mosaico.io/srv/f-default/img?method=placeholder&amp;params=190%2C160"
                   alt="" style="display: block; border-radius: 0px; width: 100%; height: auto;font-size: 13px;
-                  font-family: Arial, Helvetica, sans-serif; color: #3f3f3f; -ko-font-size: @[longTextStyle.size]px; -ko-font-family: @longTextStyle.face;
-                  -ko-color: @longTextStyle.color; -ko-attr-height: @imageHeight; -ko-attr-alt: @rightImage.alt;" /></a>
+                  font-family: Arial, Helvetica, sans-serif; color: #333333; -ko-font-size: @[longTextStyle.size]px; -ko-font-family: @longTextStyle.face;
+                  -ko-attr-height: @imageHeight; -ko-attr-alt: @rightImage.alt;" /></a>
 </div>
 <!--[if (gte mso 9)|(lte ie 8)]></td><![endif]-->
 <!--[if (gte mso 9)|(lte ie 8)]></tr></table><![endif]-->
@@ -1298,8 +1298,8 @@
                       hspace="0" align="left" border="0" vspace="0" width="166" height="160"
                       src="http://mosaico.io/srv/f-default/img?method=placeholder&amp;params=166%2C160" class="mobile-full"
                       alt="" style="display: block; border-radius: 0px; width: 100%; height: auto;font-size: 13px;
-                      font-family: Arial, Helvetica, sans-serif; color: #3f3f3f; -ko-font-size: @[longTextStyle.size]px; -ko-font-family: @longTextStyle.face;
-                      -ko-color: @longTextStyle.color; -ko-attr-height: @imageHeight; -ko-attr-alt: @leftImage.alt;" /></a>
+                      font-family: Arial, Helvetica, sans-serif; color: #333333; -ko-font-size: @[longTextStyle.size]px; -ko-font-family: @longTextStyle.face;
+                      -ko-attr-height: @imageHeight; -ko-attr-alt: @leftImage.alt;" /></a>
                   </td>
                 </tr>
               </table>
@@ -1315,8 +1315,8 @@
                       hspace="0" align="left" border="0" vspace="0" width="166" height="160"
                       src="http://mosaico.io/srv/f-default/img?method=placeholder&amp;params=166%2C160" class="mobile-full"
                       alt="" style="display: block; border-radius: 0px; width: 100%; height: auto;font-size: 13px;
-                      font-family: Arial, Helvetica, sans-serif; color: #3f3f3f; -ko-font-size: @[longTextStyle.size]px; -ko-font-family: @longTextStyle.face;
-                      -ko-color: @longTextStyle.color; -ko-attr-height: @imageHeight; -ko-attr-alt: @middleImage.alt;" /></a>
+                      font-family: Arial, Helvetica, sans-serif; color: #333333; -ko-font-size: @[longTextStyle.size]px; -ko-font-family: @longTextStyle.face;
+                      -ko-attr-height: @imageHeight; -ko-attr-alt: @middleImage.alt;" /></a>
                   </td>
                 </tr>
               </table>
@@ -1332,8 +1332,8 @@
                       hspace="0" align="right" border="0" vspace="0" width="166" height="160"
                       src="http://mosaico.io/srv/f-default/img?method=placeholder&amp;params=166%2C160" class="mobile-full"
                       alt="" style="display: block; border-radius: 0px; width: 100%; height: auto;font-size: 13px;
-                      font-family: Arial, Helvetica, sans-serif; color: #3f3f3f; -ko-font-size: @[longTextStyle.size]px; -ko-font-family: @longTextStyle.face;
-                      -ko-color: @longTextStyle.color; -ko-attr-height: @imageHeight; -ko-attr-alt: @rightImage.alt;" /></a>
+                      font-family: Arial, Helvetica, sans-serif; color: -ko-color: @longTextStyle.color; ; -ko-font-size: @[longTextStyle.size]px; -ko-font-family: @longTextStyle.face;
+                      -ko-attr-height: @imageHeight; -ko-attr-alt: @rightImage.alt;" /></a>
                   </td>
                 </tr>
               </table>
