--- a/packages/mosaico/templates/versafix-1/template-versafix-1.html
+++ b/packages/mosaico/templates/versafix-1/template-versafix-1.html
@@ -1381,8 +1381,8 @@
                     <table class="vb-content" border="0" cellspacing="9" cellpadding="0" width="276" style="width: 100%" align="left">
                       <tr>
                         <td valign="middle" align="left"
-                          style="font-size: 13px; font-family: Arial, Helvetica, sans-serif; color: #919191; text-align:left;
-                          -ko-font-size: @[longTextStyle.size]px; -ko-font-family: @longTextStyle.face; -ko-color: @longTextStyle.color"
+                          style="font-size: 13px; font-family: Arial, Helvetica, sans-serif; color: #989898; text-align:left;
+                          -ko-font-size: @[longTextStyle.size]px; -ko-font-family: @longTextStyle.face;"
                           data-ko-editable="longText" class="long-text links-color mobile-textcenter">
                           <p>Address and <a href="">Contacts</a></p>
                         </td>
