Make titles and buttons bold

--- a/packages/mosaico/templates/versafix-1/template-versafix-1.html
+++ b/packages/mosaico/templates/versafix-1/template-versafix-1.html
@@ -548,7 +548,7 @@
 
                     <table class="vb-content" border="0" cellspacing="9" cellpadding="0" width="368" style="width: 100%; -ko-attr-width: @[570 - 2 * 18 - Math.round(imageWidth)]" align="left">
                       <tr data-ko-display="titleVisible">
-                        <td style="font-size: 18px; font-family: Arial, Helvetica, sans-serif; color: #02426f; text-align:left;
+                        <td style="font-weight: bold; font-size: 18px; font-family: Arial, Helvetica, sans-serif; color: #02426f; text-align:left;
                           -ko-font-size: @[titleTextStyle.size]px; -ko-font-family: @titleTextStyle.face;">
                           <span style="color: #02426f" data-ko-editable="titleText">
                           Title
@@ -567,12 +567,12 @@
                           <table cellpadding="0" border="0" align="left" cellspacing="0" class="mobile-full" style="padding-top: 4px">
                             <tr>
                               <td width="auto" valign="middle" bgcolor="#1a3867" align="center" height="26" 
-                                style="font-size: 13px; font-family: Arial, Helvetica, sans-serif; text-align:center; color: #ffffff; font-weight: normal;
+                                style="font-size: 13px; font-family: Arial, Helvetica, sans-serif; text-align:center; color: #ffffff; font-weight: bold;
                                 padding-left: 18px; padding-right: 18px; background-color: #1a3867; border-radius: 4px;
                                 -ko-border-radius: @[buttonStyle.radius]px;
                                 -ko-attr-bgcolor: @buttonStyle.buttonColor; -ko-background-color: @buttonStyle.buttonColor;
                                 -ko-font-size: @[buttonStyle.size]px; -ko-font-family: @buttonStyle.face; -ko-color: @buttonStyle.color;">
-                                <a data-ko-editable="buttonLink.text" href="" style="text-decoration: none; color: #ffffff; font-weight: normal;
+                                <a data-ko-editable="buttonLink.text" href="" style="text-decoration: none; color: #ffffff; font-weight: bold;
                                   -ko-color: @buttonStyle.color; -ko-attr-href: @buttonLink.url">BUTTON</a>
                               </td>
                             </tr>
@@ -635,7 +635,7 @@
           </tr>
           <tr><td><table align="left" border="0" cellpadding="0" cellspacing="0" width="100%">
             <tr data-ko-display="titleVisible">
-              <td style="font-size: 18px; font-family: Arial, Helvetica, sans-serif; color: #02426f; text-align:left;
+              <td style="font-weight: bold; font-size: 18px; font-family: Arial, Helvetica, sans-serif; color: #02426f; text-align:left;
                 -ko-font-size: @[titleTextStyle.size]px; -ko-font-family: @titleTextStyle.face;">
                 <span style="color: #02426f;" data-ko-editable="text">
                Section Title
@@ -660,12 +660,12 @@
                 <table cellpadding="0" border="0" align="left" cellspacing="0" class="mobile-full">
                   <tr>
                     <td width="auto" valign="middle" bgcolor="#1a3867" align="center" height="26" 
-                      style="font-size: 13px; font-family: Arial, Helvetica, sans-serif; text-align:center; color: #ffffff; font-weight: normal;
+                      style="font-size: 13px; font-family: Arial, Helvetica, sans-serif; text-align:center; color: #ffffff; font-weight: bold;
                       padding-left: 18px; padding-right: 18px; background-color: #1a3867; border-radius: 4px;
                       -ko-border-radius: @[buttonStyle.radius]px;
                       -ko-attr-bgcolor: @buttonStyle.buttonColor; -ko-background-color: @buttonStyle.buttonColor;
                       -ko-font-size: @[buttonStyle.size]px; -ko-font-family: @buttonStyle.face; -ko-color: @buttonStyle.color; ">
-                      <a data-ko-editable="buttonLink.text" href="" style="text-decoration: none; color: #ffffff; font-weight: normal;
+                      <a data-ko-editable="buttonLink.text" href="" style="text-decoration: none; color: #ffffff; font-weight: bold;
                         -ko-color: @buttonStyle.color; -ko-attr-href: @buttonLink.url">BUTTON</a>
                     </td>
                   </tr>
@@ -765,7 +765,7 @@
                         </td>
                       </tr>
                       <tr data-ko-display="titleVisible">
-                        <td style="font-size: 18px; font-family: Arial, Helvetica, sans-serif; color: #02426f; text-align:left;
+                        <td style="font-weight: bold; font-size: 18px; font-family: Arial, Helvetica, sans-serif; color: #02426f; text-align:left;
                           -ko-font-size: @[titleTextStyle.size]px; -ko-font-family: @titleTextStyle.face;">
                           <span style="color: #02426f;" data-ko-editable="leftTitleText">Title
                           </span>
@@ -783,12 +783,12 @@
                           <table cellpadding="0" border="0" align="left" cellspacing="0" class="mobile-full" style="padding-top: 4px">
                             <tr>
                               <td width="auto" valign="middle" bgcolor="#1a3867" align="center" height="26" 
-                                style="font-size: 13px; font-family: Arial, Helvetica, sans-serif; text-align:center; color: #ffffff; font-weight: normal;
+                                style="font-size: 13px; font-family: Arial, Helvetica, sans-serif; text-align:center; color: #ffffff; font-weight: bold;
                                 padding-left: 18px; padding-right: 18px; background-color: #1a3867; border-radius: 4px;
                                 -ko-border-radius: @[buttonStyle.radius]px;
                                 -ko-attr-bgcolor: @buttonStyle.buttonColor; -ko-background-color: @buttonStyle.buttonColor;
                                 -ko-font-size: @[buttonStyle.size]px; -ko-font-family: @buttonStyle.face; -ko-color: @buttonStyle.color; ">
-                                <a data-ko-editable="leftButtonLink.text" href="" style="text-decoration: none; color: #ffffff; font-weight: normal;
+                                <a data-ko-editable="leftButtonLink.text" href="" style="text-decoration: none; color: #ffffff; font-weight: bold;
                                   -ko-color: @buttonStyle.color; -ko-attr-href: @leftButtonLink.url">BUTTON</a>
                               </td>
                             </tr>
@@ -813,7 +813,7 @@
                         </td>
                       </tr>
                       <tr data-ko-display="titleVisible">
-                        <td style="font-size: 18px; font-family: Arial, Helvetica, sans-serif; color: #02426f; text-align:left;
+                        <td style="font-weight: bold; font-size: 18px; font-family: Arial, Helvetica, sans-serif; color: #02426f; text-align:left;
                           -ko-font-size: @[titleTextStyle.size]px; -ko-font-family: @titleTextStyle.face;">
                           <span style="color: #02426f;"  data-ko-editable="middleTitleText">
                          Title
@@ -832,12 +832,12 @@
                           <table cellpadding="0" border="0" align="left" cellspacing="0" class="mobile-full" style="padding-top: 4px">
                             <tr>
                               <td width="auto" valign="middle" bgcolor="#1a3867" align="center" height="26" 
-                                style="font-size: 13px; font-family: Arial, Helvetica, sans-serif; text-align:center; color: #ffffff; font-weight: normal;
+                                style="font-size: 13px; font-family: Arial, Helvetica, sans-serif; text-align:center; color: #ffffff; font-weight: bold;
                                 padding-left: 18px; padding-right: 18px; background-color: #1a3867; border-radius: 4px;
                                 -ko-border-radius: @[buttonStyle.radius]px;
                                 -ko-attr-bgcolor: @buttonStyle.buttonColor; -ko-background-color: @buttonStyle.buttonColor;
                                 -ko-font-size: @[buttonStyle.size]px; -ko-font-family: @buttonStyle.face; -ko-color: @buttonStyle.color; ">
-                                <a data-ko-editable="middleButtonLink.text" href="" style="text-decoration: none; color: #ffffff; font-weight: normal;
+                                <a data-ko-editable="middleButtonLink.text" href="" style="text-decoration: none; color: #ffffff; font-weight: bold;
                                   -ko-color: @buttonStyle.color; -ko-attr-href: @middleButtonLink.url">BUTTON</a>
                               </td>
                             </tr>
@@ -862,7 +862,7 @@
                         </td>
                       </tr>
                       <tr data-ko-display="titleVisible">
-                        <td style="font-size: 18px; font-family: Arial, Helvetica, sans-serif; color: #02426f; text-align:left;
+                        <td style="font-weight: bold; font-size: 18px; font-family: Arial, Helvetica, sans-serif; color: #02426f; text-align:left;
                           -ko-font-size: @[titleTextStyle.size]px; -ko-font-family: @titleTextStyle.face;">
                           <span style="color: #02426f;" data-ko-editable="rightTitleText">
                          Title
@@ -881,12 +881,12 @@
                           <table cellpadding="0" border="0" align="left" cellspacing="0" class="mobile-full" style="padding-top: 4px">
                             <tr>
                               <td width="auto" valign="middle" bgcolor="#1a3867" align="center" height="26" 
-                                style="font-size: 13px; font-family: Arial, Helvetica, sans-serif; text-align:center; color: #ffffff; font-weight: normal;
+                                style="font-size: 13px; font-family: Arial, Helvetica, sans-serif; text-align:center; color: #ffffff; font-weight: bold;
                                 padding-left: 18px; padding-right: 18px; background-color: #1a3867; border-radius: 4px;
                                 -ko-border-radius: @[buttonStyle.radius]px;
                                 -ko-attr-bgcolor: @buttonStyle.buttonColor; -ko-background-color: @buttonStyle.buttonColor;
                                 -ko-font-size: @[buttonStyle.size]px; -ko-font-family: @buttonStyle.face; -ko-color: @buttonStyle.color;">
-                                <a data-ko-editable="rightButtonLink.text" href="" style="text-decoration: none; color: #ffffff; font-weight: normal;
+                                <a data-ko-editable="rightButtonLink.text" href="" style="text-decoration: none; color: #ffffff; font-weight: bold;
                                   -ko-color: @buttonStyle.color; -ko-attr-href: @rightButtonLink.url">BUTTON</a>
                               </td>
                             </tr>
@@ -939,7 +939,7 @@
                         </td>
                       </tr>
                       <tr data-ko-display="titleVisible">
-                        <td style="font-size: 18px; font-family: Arial, Helvetica, sans-serif; color: #02426f; text-align:left;
+                        <td style="font-weight: bold; font-size: 18px; font-family: Arial, Helvetica, sans-serif; color: #02426f; text-align:left;
                           -ko-font-size: @[titleTextStyle.size]px; -ko-font-family: @titleTextStyle.face;">
                           <span style="color: #02426f;" data-ko-editable="leftTitleText">
                           Title
@@ -958,12 +958,12 @@
                           <table cellpadding="0" border="0" align="left" cellspacing="0" class="mobile-full" style="padding-top: 4px;">
                             <tr>
                               <td width="auto" valign="middle" bgcolor="#1a3867" align="center" height="26" 
-                                style="font-size: 13px; font-family: Arial, Helvetica, sans-serif; text-align:center; color: #ffffff; font-weight: normal;
+                                style="font-size: 13px; font-family: Arial, Helvetica, sans-serif; text-align:center; color: #ffffff; font-weight: bold;
                                 padding-left: 18px; padding-right: 18px; background-color: #1a3867; border-radius: 4px;
                                 -ko-border-radius: @[buttonStyle.radius]px;
                                 -ko-attr-bgcolor: @buttonStyle.buttonColor; -ko-background-color: @buttonStyle.buttonColor;
                                 -ko-font-size: @[buttonStyle.size]px; -ko-font-family: @buttonStyle.face; -ko-color: @buttonStyle.color; ">
-                                <a data-ko-editable="leftButtonLink.text" href="" style="text-decoration: none; color: #ffffff; font-weight: normal;
+                                <a data-ko-editable="leftButtonLink.text" href="" style="text-decoration: none; color: #ffffff; font-weight: bold;
                                   -ko-color: @buttonStyle.color; -ko-attr-href: @leftButtonLink.url">BUTTON</a>
                               </td>
                             </tr>
@@ -988,7 +988,7 @@
                         </td>
                       </tr>
                       <tr data-ko-display="titleVisible">
-                        <td style="font-size: 18px; font-family: Arial, Helvetica, sans-serif; color: #02426f; text-align:left;
+                        <td style="font-weight: bold; font-size: 18px; font-family: Arial, Helvetica, sans-serif; color: #02426f; text-align:left;
                           -ko-font-size: @[titleTextStyle.size]px; -ko-font-family: @titleTextStyle.face;">
                           <span style="color: #02426f;" data-ko-editable="rightTitleText">
                          Title
@@ -1007,12 +1007,12 @@
                           <table cellpadding="0" border="0" align="left" cellspacing="0" class="mobile-full" style="padding-top: 4px;">
                             <tr>
                               <td width="auto" valign="middle" bgcolor="#1a3867" align="center" height="26" 
-                                style="font-size: 13px; font-family: Arial, Helvetica, sans-serif; text-align:center; color: #ffffff; font-weight: normal;
+                                style="font-size: 13px; font-family: Arial, Helvetica, sans-serif; text-align:center; color: #ffffff; font-weight: bold;
                                 padding-left: 18px; padding-right: 18px; background-color: #1a3867; border-radius: 4px;
                                 -ko-border-radius: @[buttonStyle.radius]px;
                                 -ko-attr-bgcolor: @buttonStyle.buttonColor; -ko-background-color: @buttonStyle.buttonColor;
                                 -ko-font-size: @[buttonStyle.size]px; -ko-font-family: @buttonStyle.face; -ko-color: @buttonStyle.color; ">
-                                <a data-ko-editable="rightButtonLink.text" href="" style="text-decoration: none; color: #ffffff; font-weight: normal;
+                                <a data-ko-editable="rightButtonLink.text" href="" style="text-decoration: none; color: #ffffff; font-weight: bold;
                                   -ko-color: @buttonStyle.color; -ko-attr-href: @rightButtonLink.url">BUTTON</a>
                               </td>
                             </tr>
@@ -1084,12 +1084,12 @@
               <table cellpadding="0" border="0" align="center" cellspacing="0" class="mobile-full">
                 <tr>
                   <td width="auto" valign="middle" bgcolor="#1a3867" align="center" height="50" 
-                    style="font-size:22px; font-family: Arial, Helvetica, sans-serif; color: #ffffff; font-weight: normal;
+                    style="font-size:22px; font-family: Arial, Helvetica, sans-serif; color: #ffffff; font-weight: bold;
                     padding-left: 14px; padding-right: 14px; background-color: #1a3867; border-radius: 4px;
                     -ko-attr-bgcolor: @bigButtonStyle.buttonColor; -ko-background-color: @bigButtonStyle.buttonColor;
                      -ko-border-radius: @[bigButtonStyle.radius]px;
                     -ko-font-size: @[bigButtonStyle.size]px; -ko-font-family: @bigButtonStyle.face; -ko-color: @bigButtonStyle.color; ">
-                    <a data-ko-link="link.url" data-ko-editable="link.text" href="" style="text-decoration: none; color: #ffffff; font-weight: normal;
+                    <a data-ko-link="link.url" data-ko-editable="link.text" href="" style="text-decoration: none; color: #ffffff; font-weight: bold;
                       -ko-color: @bigButtonStyle.color;">BUTTON</a>
                   </td>
                 </tr>
