Put City Bible Forum logo in pre-header

--- a/packages/mosaico/templates/versafix-1/template-versafix-1.html
+++ b/packages/mosaico/templates/versafix-1/template-versafix-1.html
@@ -419,7 +419,7 @@
         <table width="570" border="0" cellpadding="0" cellspacing="0" class="vb-row halfpad" bgcolor="#ffffff" 
           style="width: 100%; max-width: 570px; background-color: #ffffff; -ko-attr-bgcolor: @backgroundColor; -ko-background-color: @backgroundColor;">
           <tr>
-            <td align="center" valign="top" bgcolor="#ffffff" style="font-size: 0; background-color: #ffffff;
+            <td align="left" valign="top" bgcolor="#ffffff" style="font-size: 0; background-color: #ffffff;
               -ko-attr-bgcolor: @backgroundColor; -ko-background-color: @backgroundColor" align="left">
 
 <!--[if (gte mso 9)|(lte ie 8)]><table align="center" border="0" cellspacing="0" cellpadding="0" width="552"><tr><![endif]-->
@@ -427,36 +427,13 @@
 <div style="display:inline-block; max-width:276px; vertical-align:top; width:100%;" class="mobile-full"> 
                     <table class="vb-content" border="0" cellspacing="9" cellpadding="0" width="276" style="width: 100%;" align="left">
                       <tr>
-                        <td width="100%" valign="top" align="left" style="font-weight: normal; text-align:left; font-size: 14px;
+                        <td width="100%" valign="top" align="left" style="font-weight: normal; text-align:left; font-size: 14px; padding-bottom: 35px;
                           font-family: 'Open Sans', , Helvetica, sans-serif; color: #ffffff;
                           -ko-color: @linkStyle.color">
-                          <a data-ko-display="preheaderLinkOption neq 'none'" data-ko-editable="unsubscribeText" href="{action.unsubscribeUrl}" 
-                             style="text-decoration: underline; color: #ffffff; -ko-attr-href: @preheaderLinkOption; 
-                             -ko-color: @linkStyle.color; -ko-text-decoration: @linkStyle.decoration">Unsubscribe</a> 
-                          <span data-ko-display="preheaderLinkOption eq 'none'" style="font-size: 14px; color: #919191; font-weight: normal; text-align:center;
-                            font-family: 'Open Sans', Arial, Helvetica, sans-serif; -ko-color: @longTextStyle.color;
-                            -ko-bind-text: @preheaderText; display: none"></span>
+                          <a href="http://citybibleforum.org"><img src="http://citybibleforum.org/sites/all/themes/cbootf/logo-email-signature.jpg" alt="City Bible Forum" border="0" /></a>
                         </td>
                       </tr>
                     </table>
-</div><!--[if (gte mso 9)|(lte ie 8)]>
-</td><td align="left" valign="top" width="276">
-<![endif]--><div style="display:inline-block; max-width:276px; vertical-align:top; width:100%;" class="mobile-full mobile-hide"> 
-
-                    <table class="vb-content" border="0" cellspacing="9" cellpadding="0" width="276" style="width: 100%; text-align: right;" align="left">
-                      <tr>
-                        <td width="100%" valign="top" style="font-weight: normal;  font-size: 14px; font-family: 'Open Sans', Arial, Helvetica, sans-serif; color: #ffffff;
-                      -ko-color: @linkStyle.color">
-                      <span style="color: #ffffff; text-decoration: underline;
-                        -ko-color: @linkStyle.color; -ko-text-decoration: @linkStyle.decoration">
-                          <a data-ko-editable="webversionText" href="[show_link]" 
-                          style="text-decoration: underline; color: #ffffff;
-                           -ko-color: @linkStyle.color; -ko-text-decoration: @linkStyle.decoration">View in your browser</a>
-                         </span>
-                       </td>
-                      </tr>
-                    </table>
-
 </div><!--[if (gte mso 9)|(lte ie 8)]>
 </td></tr></table><![endif]-->
 
