--- a/packages/mosaico/templates/versafix-1/template-versafix-1.html
+++ b/packages/mosaico/templates/versafix-1/template-versafix-1.html
@@ -657,7 +657,7 @@
     style="background-color: #ffffff; -ko-background-color: @externalBackgroundColor; -ko-attr-bgcolor: @externalBackgroundColor" data-ko-block="titleBlock">
     <tr>
       <td class="vb-outer" align="center" valign="top" bgcolor="#ffffff"
-        style="background-color: #ffffff; -ko-background-color: @externalBackgroundColor; -ko-attr-bgcolor: @externalBackgroundColor">
+        style="background-color: #ffffff; padding-top: 20px; -ko-background-color: @externalBackgroundColor; -ko-attr-bgcolor: @externalBackgroundColor">
 
 <!--[if (gte mso 9)|(lte ie 8)]><table align="center" border="0" cellspacing="0" cellpadding="0" width="570"><tr><td align="center" valign="top"><![endif]-->
         <div class="oldwebkit">
@@ -665,9 +665,10 @@
           style="width: 100%; max-width: 570px; background-color: #1e9dd8;">
           <tr>
             <td bgcolor="#1e9dd8" align="center" 
-              style="background-color: #1e9dd8; font-size: 22px; font-family: 'Open Sans', Arial, Helvetica, sans-serif; color: #ffffff; text-align: center;
+              style="background-color: #1e9dd8; font-size: 22px; font-family: 'Open Sans', Arial, Helvetica, sans-serif; color: #ffffff; text-align: left;
+              font-weight: bold;
               -ko-attr-align: @bigTitleStyle.align;
-              -ko-color: @bigTitleStyle.color; -ko-text-align: @bigTitleStyle.align">
+              -ko-color: @bigTitleStyle.color;">
               <span data-ko-editable="text">Section Title</span>
             </td>
           </tr>
