Use relative address for CBF logo

--- a/packages/mosaico/templates/versafix-1/template-versafix-1.html
+++ b/packages/mosaico/templates/versafix-1/template-versafix-1.html
@@ -430,7 +430,7 @@
                         <td width="100%" valign="top" align="left" style="font-weight: normal; text-align:left; font-size: 14px; padding-bottom: 35px;
                           font-family: 'Open Sans', , Helvetica, sans-serif; color: #ffffff;
                           -ko-color: @linkStyle.color">
-                          <a href="http://citybibleforum.org"><img src="http://citybibleforum.org/sites/all/themes/cbootf/logo-email-signature.jpg" alt="City Bible Forum" border="0" /></a>
+                          <a href="http://citybibleforum.org"><img src="/sites/all/themes/cbootf/logo-email-signature.jpg" alt="City Bible Forum" border="0" /></a>
                         </td>
                       </tr>
                     </table>
