Add CBF logo to footer

--- a/packages/mosaico/templates/versafix-1/template-versafix-1.html
+++ b/packages/mosaico/templates/versafix-1/template-versafix-1.html
@@ -1339,7 +1339,11 @@
                         <td valign="middle" align="left"
                           style="font-size: 14px; font-family: 'Open Sans', Arial, Helvetica, sans-serif; color: #989898; text-align:left;"
                           data-ko-editable="longText" class="long-text links-color mobile-textcenter">
-                          <p>Address and <a href="">Contacts</a></p>
+                          <p>
+                            <a href="http://citybibleforum.org">
+                              <img src="/sites/all/themes/cbootf/logo-email-footer.jpg" alt="City Bible Forum" border="0" />
+                            </a>
+                          </p>
                         </td>
                       </tr>
                     </table>
